resources/gdt/gdtmain.dc.yaml
appID: "gdtdefaultapp"
owner: "gdt"

objectID: "gdtmonitor"
type: DeploymentConfig

yamlSource: 
  apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: $appID$-$objectID$-$instance$
    namespace: $namespace$
  spec:
    replicas: 1
    strategy:
      resources: {}
    template:
      metadata:
        labels:
          jobconfig: $objectID$-$instance$
          app: $appID$
      spec:
        containers:
        - name: gdtmain
          image: "docker-registry.default.svc:5000/richardmproject/is-bigdatastack-gdt:latest"
          resources:
            limits:
              cpu: "1000m"
              memory: "2048Mi"
          command:
           - 'java'
          args:
           - '-jar'
           - './target/BigDataStack-GDT-0.8.jar'
           - 'namespaceMonitor'
          imagePullPolicy: Always
        securityContext: {}
        serviceAccount: default
