resources/gdt/operationsequence.pod.yaml
owner: gdt
objectID: "operationsequence"
type: Pod

yamlSource:
  apiVersion: v1
  kind: Pod
  metadata:
    name: $appID$-$sequenceID$-$sequenceInstance$
    namespace: $namespace$
    labels:
      operationsequence: "True"
      appID: "$appID$"
      sequenceID: "$sequenceID$"
      sequenceInstance: "$sequenceInstance$"
      runnerIndex: "$runnerIndex$"
  spec:
    containers:
    - name: gdtmain
      image: "docker-registry.default.svc:5000/richardmproject/is-bigdatastack-gdt:latest"
      imagePullPolicy: Always
      command:
       - 'java'
      args:
       - '-jar'
       - './target/BigDataStack-GDT-0.8.jar'
       - 'operationSequence'
      resources: {}
    dnsPolicy: ClusterFirst
    restartPolicy: Never
