resources/gdt/prometheus.dc.yaml
appID: "gdtdefaultapp"
owner: "richardm"

objectID: "prometheus"
type: DeploymentConfig

yamlSource: 
  apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: $appID$-$objectID$-$instance$
    namespace: $namespace$
  spec:
    replicas: 1
    strategy:
      resources: {}
    template:
      metadata:
        labels:
          jobconfig: $objectID$-$instance$
          app: $appID$
      spec:
        containers:
        - name: prometheus
          image: "openshift/prometheus:v2.3.2"
          resources:
            requests:
              cpu: "1000m"
              memory: "2048Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
          args:
           - '--web.console.templates=/etc/prometheus/consoles'
           - '--web.console.libraries=/etc/prometheus/console_libraries'
           - '--config.file=/etc/prometheus/config_out/prometheus.env.yaml'
           - '--storage.tsdb.path=/prometheus'
           - '--storage.tsdb.retention=7d'
           - '--web.enable-lifecycle'
           - '--storage.tsdb.no-lockfile'
           - >-
             --web.external-url=https://prometheus-gdt-$namespace$.ida.dcs.gla.ac.uk/
           - '--web.route-prefix=/'
           - '--web.listen-address=0.0.0.0:9090'
          volumeMounts:
           - name: config
             readOnly: true
             mountPath: /etc/prometheus/config_out
           - name: prometheus-k8s-db
             mountPath: /prometheus
           - name: kubesecret
             readOnly: true
             mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          imagePullPolicy: Always
          ports:
           - name: web
             containerPort: 9090
             protocol: TCP
           - name: prometheus
             containerPort: 9091
             protocol: TCP
        securityContext: {}
        serviceAccount: $serviceaccount$
        volumes:
         - name: config
           configMap:
             name: $prometheusConfig$
             defaultMode: 420
         - name: prometheus-k8s-db
           emptyDir: {}
         - name: kubesecret
           secret:
             secretName: $kubeServiceAccountSecret$
             defaultMode: 420
