resources/gdt/prometheus.route.yaml
appID: "gdtdefaultapp"
owner: "gdt"

objectID: "prometheusroute"
type: Service

yamlSource:
  kind: Route
  apiVersion: route.openshift.io/v1
  metadata:
    name: $objectID$-$instance$
    namespace: $namespace$
  spec:
    host: prometheus-gdt-$namespace$.ida.dcs.gla.ac.uk
    to:
      kind: Service
      name: $service$
      weight: 100
    port:
      targetPort: web
    wildcardPolicy: None
